[package]
name = "client"
version = "0.1.0"
edition = "2021"
authors = ["dravenk <longxianwen@outlook.com>"]
# pro for rust
description = "Blockchain and web3 client toolbox."
readme = "README.md"
repository = "https://github.com/dravenk/client/"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/client"
keywords = ["client", "mining", "coin", "blockchain", "web3"]

[dependencies]
